--- a/src/components/home/HeroSection.astro
+++ b/src/components/home/HeroSection.astro
@@ -24,6 +24,7 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
     <a
       href="https://calendly.com/r44j/30min"
       class="rounded-lg bg-accent2 px-6 py-2 text-xl font-bold text-white ring-accent2 ring-offset-2 ring-offset-black hover:ring-2 focus:ring-2"
+      transition:name="hero-call-to-action"
     >
       Book a free meeting</a
     >
