--- a/src/pages/xerox.astro
+++ b/src/pages/xerox.astro
@@ -28,6 +28,7 @@ const { default: StickyNote } = await import(
         </p>
         <a
           href="mailto:vadegharraj@gmail.com"
+          transition:name="hero-call-to-action"
           class="my-5 rounded-lg bg-accent2 px-6 py-2 text-xl font-bold text-white ring-accent2 ring-offset-2 ring-offset-black hover:ring-2 focus:ring-2"
         >
           Email Me</a
@@ -41,6 +42,7 @@ const { default: StickyNote } = await import(
 
       <div class="w-full pt-5 md:pt-28">
         <iframe
+          title="r44j location on google maps"
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3810.500876119962!2d80.12579367626876!3d17.24298618361979!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a34591483e00dab%3A0x1771009563e9d8b4!2sR44j%20Xerox%20and%20Services!5e0!3m2!1sen!2sin!4v1708097299774!5m2!1sen!2sin"
           class="w-full rounded-md"
           width="800"
