--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -22,15 +22,23 @@ const pathname = Astro.url.pathname;
     <div id="profile-divider" class="h-10 w-[0.5px] rounded-full bg-white/70">
     </div>
     <div id="profile-data" class="flex flex-col gap-2">
-      <a href="/about" id="name" class="font-medium"> Full Stack Developer</a>
+      <a href="/about" id="name" class="font-medium text-white">
+        Full Stack Developer</a
+      >
       <Socials className="flex items-center gap-2" />
     </div>
   </div>
 
   <nav class={`flex items-center font-medium`}>
-    <HeaderNavItem active={pathname === "/"} href="/">Home</HeaderNavItem>
+    <HeaderNavItem active={pathname === "/"} href="/">Localhost</HeaderNavItem>
     <HeaderNavItem active={pathname === "/about"} href="/about">
       About
+    </HeaderNavItem>
+    <HeaderNavItem active={pathname === "/uses"} href="/uses">
+      Uses
+    </HeaderNavItem>
+    <HeaderNavItem active={pathname === "/blogs"} href="/blogs">
+      Blogs
     </HeaderNavItem>
     <!-- {
       pathname === "/xerox" && (
@@ -115,20 +123,6 @@ const pathname = Astro.url.pathname;
         .to("#profile-data", { opacity: 1 })
         .add(staggerTl)
         .to(main, { display: "flex", opacity: 1, duration: 1 })
-        .to(
-          nav,
-          {
-            display:
-              window.location.pathname === "/"
-                ? isDesktop
-                  ? "flex"
-                  : "none"
-                : "flex",
-            opacity: 1,
-            duration: 1
-          },
-          "<+=0.2"
-        )
         .to(footer, { display: "block", opacity: 1, duration: 1 }, "<+=0.2");
     }
   );
