--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -10,7 +10,7 @@ import { Image } from "astro:assets";
 <Layout title="About R44J">
   <Main>
     <div
-      class="mx-auto flex w-full max-w-screen-lg flex-col items-center gap-10 overflow-x-hidden px-8 py-44 pt-24 md:flex-row md:items-start"
+      class="mx-auto flex w-full max-w-screen-lg flex-col items-center gap-10 overflow-x-hidden px-5 py-32 md:flex-row md:items-start md:py-44"
     >
       <img
         id="profile-img"
@@ -24,7 +24,9 @@ import { Image } from "astro:assets";
           class="flex w-full justify-between gap-5 border-b border-white/10 pb-5"
         >
           <div class="flex flex-col gap-3">
-            <h1 class="text-3xl font-light">Vadeghar 🅡aja Narayana</h1>
+            <h1 class="text-3xl font-light text-white">
+              Vadeghar 🅡aja Narayana
+            </h1>
             <Socials
               className="flex items-center gap-2 [&_svg]:h-5 [&_svg]:w-5"
             />
@@ -44,31 +46,9 @@ import { Image } from "astro:assets";
 
         <div class="border-b border-white/20 py-5">
           Hi there 👋,<br />
-           I'm a full stack web developer with a year and half experience at
-          Manifold Ventures LLC 🏢, a US-based startup. I specialize in<br />
-           ▻ React JS<br />
-           ▻ Next.js<br />
-           ▻ Tailwind CSS<br />
-           ▻ Chrome Extension development<br />
-           ▻ and SEO<br />
-           to create engaging web applications.<br />
-           With proficiency in<br />
-           ▻ Node JS<br />
-           ▻ CSS<br />
-           ▻ Vite<br />
-           ▻ Sanity.io<br />
-           ▻ Firebase<br />
-           ▻ GitHub<br />
-           ▻ MongoDB and more<br />
-           I also build scalable software solutions 🛠️.<br />
-          <br />
-           I enjoy collaborating with teams 👥 and constantly seek to enhance my
-          skills by exploring docs(sometimes code) of new frameworks and tools
-          🧰.<br />
-          <br />
-           If you're seeking a skilled and dedicated developer 👨‍💻, web designer
-          🎨, or software engineer to bring your vision to life, let's connect!
-          🔗
+          <strong class="text-white">Engaging apps & scalable solutions.</strong
+          > React, Next.js, & more. 1.5+ years building at a US startup. Let's
+          connect! 🔗
         </div>
 
         <div class="flex flex-col gap-5 py-5">
