--- a/src/pages/xerox.astro
+++ b/src/pages/xerox.astro
@@ -9,12 +9,12 @@ const { default: StickyNote } = await import(
 <Layout title="R44J Xerox and Services - Khammam">
   <Main>
     <div
-      class="mx-auto flex w-full max-w-screen-lg flex-col items-center gap-10 overflow-x-hidden px-8 py-16 pt-28 md:max-w-screen-xl md:py-44"
+      class="mx-auto flex w-full max-w-screen-lg flex-col items-center gap-10 overflow-x-hidden px-5 py-32 md:max-w-screen-xl md:py-44"
     >
       <div
         class="mx-auto flex max-w-2xl flex-col items-center gap-3 text-center"
       >
-        <h1 class="flex gap-5 pb-8 text-4xl font-extrabold">
+        <h1 class="flex gap-5 pb-8 text-4xl font-extrabold text-white">
           Pixels to Paper: Your Printing & Design Playground
         </h1>
         <p class="text-xl">
