--- a/src/components/about/Organization.astro
+++ b/src/components/about/Organization.astro
@@ -13,7 +13,7 @@ const { title, span, jobType, link } = Astro.props;
 <a href={link} class="group cursor-pointer border border-white/10 p-5">
   <div class="flex justify-between pb-5">
     <div class="">
-      <h3 class="text-xl font-bold group-hover:underline">
+      <h3 class="text-xl font-bold text-white group-hover:underline">
         {title}
         <Icon
           name="mdi:open-in-new"
