--- a/src/components/home/HeroSection.astro
+++ b/src/components/home/HeroSection.astro
@@ -7,11 +7,13 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
 ---
 
 <Section
-  className="mx-auto grid w-full max-w-screen-2xl place-items-center overflow-x-hidden px-8 pt-12 md:pt-44"
+  className="mx-auto grid w-full max-w-screen-2xl place-items-center overflow-x-hidden px-5 pt-32 md:pt-44"
 >
   <div class="flex w-full flex-col items-center gap-5 text-center">
     <p class="text-3xl font-semibold leading-tight sm:text-4xl md:text-5xl">
-      I'm a Development Ally<br />for Innovators
+      I'm a <span class="text-white">Development Ally</span><br />for Innovators
+
+
       <span class="[&>svg]:inline-block [&>svg]:h-8 [&>svg]:w-8">
         <Fragment set:html={funStar} />
       </span>
@@ -46,7 +48,7 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
       class="aspect-square rounded-xl object-cover"></video>
 
     <div class="">
-      <h2 class="pb-10 text-2xl font-semibold">
+      <h2 class="pb-10 text-2xl font-semibold text-white">
         Efficiently craft Responsive Web designs
         <span class="[&>svg]:inline-block [&>svg]:h-8 [&>svg]:w-8">
           <Fragment set:html={rocket} />
@@ -63,7 +65,7 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
             1
           </div>
           <div class="flex-shrink">
-            <strong>Automation:</strong>
+            <strong class="text-white/90">Automation:</strong>
              Aliases, snippets, and scripts streamline my workflow, freeing up
             time for creative problem-solving.
           </div>
@@ -75,7 +77,7 @@ const { default: rocket } = await import(`@/assets/rocket.svg?raw`);
             2
           </div>
           <div class="flex-shrink">
-            <strong>Agility:</strong>
+            <strong class="text-white/90">Agility:</strong>
              I navigate complex tasks with ease, using shortcuts to deliver
             solutions with speed and precision.
           </div>
