--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -52,7 +52,7 @@ const { title, description, className } = Astro.props;
 
     <link rel="sitemap" href="/sitemap-index.xml" />
   </head>
-  <body class={`${className ?? "bg-black text-white"} antialiased`}>
+  <body class={`${className ?? "bg-black text-white/60"} antialiased`}>
     <Header />
     <slot />
     <Footer />
@@ -83,6 +83,7 @@ const { title, description, className } = Astro.props;
         overflow-x: hidden;
         scroll-behavior: smooth;
         font-family: system-ui, sans-serif;
+        -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
       }
     </style>
     <SpeedInsights />
