--- a/src/components/uses/hero-uses.astro
+++ b/src/components/uses/hero-uses.astro
@@ -1,12 +1,77 @@
 ---
 import Section from "../Section.astro";
+
+const Uses = [
+  {
+    name: "Macbook Air",
+    description:
+      "My reliable 13' MacBook Air from 2022, equipped with 8GB RAM and 256GB SSD, has been a powerhouse for my development workflow.",
+    link: "https://www.flipkart.com/apple-2020-macbook-air-m1-8-gb-256-gb-ssd-mac-os-big-sur-mgn63hn-a/p/itmde54f026889ce"
+  },
+  {
+    name: "Airpods",
+    description:
+      "I mostly use this for calls and while I'm using my MacBook, these Airpods deliver instant syncing unlike other Bluetooth devices.",
+    link: "https://www.flipkart.com/apple-airpods-2nd-gen-charging-case-bluetooth-headset-mic/p/itm8f1b2b0173ce4"
+  },
+  {
+    name: "JBL Earphones",
+    description:
+      "For a lighter audio experience, I turn to these JBL earphones, prioritizing ear protection over bluetooth headsets.",
+    link: "https://www.amazon.in/gp/product/B01DEWVZ2C/ref=ppx_yo_dt_b_asin_image_o01_s00?ie=UTF8&psc=1"
+  },
+  {
+    name: "Amazon Alexa",
+    description:
+      "Simplifying my daily routine, Alexa serves as a reliable assistant for basic tasks, making mornings and nights more convenient.",
+    link: "https://www.amazon.in/All-new-Echo-Dot-with-clock/dp/B085M5R82K"
+  },
+  {
+    name: "Epson Printer",
+    description:
+      "To reduce screen time and avoid distractions, I invested in an Epson printer for printing documents that I prefer to read offline.",
+    link: "https://www.flipkart.com/epson-l3250-multi-function-wifi-color-ink-tank-printer-color-page-cost-9-paise-black-24-paise/p/itm64fa60fa429b5?pid=PRNG8RM85CUZHD2E&lid=LSTPRNG8RM85CUZHD2EF3PPLK"
+  },
+  {
+    name: "Mini Fan",
+    description:
+      "Although not frequently used, this mini fan proves handy during work hours, providing a refreshing breeze at my desk.",
+    link: "https://www.amazon.in/Gaiatop-Ultra-quiet-Adjustment-Portable-Powerful/dp/B09X35F9GF/ref=sr_1_16?crid=EMKZJDVBHKIF&dib=eyJ2IjoiMSJ9.hEiWMeNDWbkxYp4b7gPa5GrV7LK32nDm8VBj-pHWs2aZIUbGHJjTQzJU5oBwu9-sQTVCjiU9n3ak9Q3F3-ElodYnRq2vPdM-pxEsBViJzd7FZbyHHLlgpM0YA_PfQSWUW12c7MHdNPeWQ1HMFEd5UhArn7lGqI9PJYwBSjAqKf6RxgkgDPyX6wAwyW3onajsjoO4t2nSFMutVOQ5agAw13XeScpOpnV2f_I2y42JQ0E.lItB57Qxngnov1d_0wFBTPv33DpBXso8uQqZ48JT4ak&dib_tag=se&keywords=mini%2Bfan&qid=1708774841&sprefix=mini%2Bfan%2Caps%2C350&sr=8-16&th=1"
+  },
+  {
+    name: "Noise Smart Watch",
+    description:
+      "A perfect companion when on the go, my Noise Smart Watch allows me to stay focused on people rather than constantly checking my mobile devices.",
+    link: "https://www.amazon.in/gp/product/B09ZQK9X8G/ref=ppx_yo_dt_b_search_asin_title?ie=UTF8&psc=1"
+  },
+  {
+    name: "Mini Sealer",
+    description:
+      "For occasional indulgence in packaged food, this Mini Sealer helps me preserve leftovers without compromising freshness. Not much effective with hign volume of plastic bags.",
+    link: "https://www.amazon.in/Nirdambhay-Handheld-Portable-Resealer-Including/dp/B08YK7BBD2/ref=sr_1_3?dib=eyJ2IjoiMSJ9.qDB7LWXcAEfS6u59RFkcyZpI73mmIsmO0w7pNUg4cqdJyBK9CqlsArB7kSR8sU1Gj1p6j3Q11DLydeY_-2FEdBROEOfoYvjVw7fF6rvPdXXS_pXfaCeeGZnC6nflmD4gW7mIrRyaXYSp88E3gAaVZ-l0_2h19GwsWgYSZldHNhu3BhrZby5x30KXthNGQxjgnSLVuVICeiqomhiVnZ_klT2QrCeWt7Qw1wZcfaj_1Ow.LYMuBwXabr_nRr_UX03mlyoOlCxE2q8XeI_RFZitJ_g&dib_tag=se&keywords=sealer&qid=1708774906&sr=8-3&th=1"
+  }
+];
 ---
 
 <Section
-  className="mx-auto grid w-full max-w-screen-2xl place-items-center overflow-x-hidden px-5 pt-32 md:pt-44"
+  className="mx-auto grid w-full max-w-screen-md place-items-center overflow-x-hidden px-5 pt-32 md:pt-44"
 >
-  <div class="flex w-full flex-col items-center gap-5 text-center">
-    <h1 class="text-3xl">Curious to know what I use?</h1>
-    <p>I'll add them soon</p>
+  <div class="flex w-full flex-col gap-5">
+    {
+      Uses.map((use) => (
+        <div class="">
+          <a
+            class="text-white underline transition-all hover:text-inherit"
+            href={use.link}
+            title={use.name}
+            target="_blank"
+            rel="noreferrer"
+          >
+            {use.name}
+          </a>
+          {use.description}
+        </div>
+      ))
+    }
   </div>
 </Section>
