--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -25,7 +25,7 @@ import { Image } from "astro:assets";
         >
           <div class="flex flex-col gap-3">
             <h1 class="text-3xl font-light text-white">
-              Vadeghar 🅡aja Narayana
+              Vadeghar Raja Narayana
             </h1>
             <Socials
               className="flex items-center gap-2 [&_svg]:h-5 [&_svg]:w-5"
@@ -45,10 +45,13 @@ import { Image } from "astro:assets";
         </div>
 
         <div class="border-b border-white/20 py-5">
-          Hi there 👋,<br />
-          <strong class="text-white">Engaging apps & scalable solutions.</strong
-          > React, Next.js, & more. 1.5+ years building at a US startup. Let's
-          connect! 🔗
+          Hi there 👋, <strong class="text-white">I'm Raj</strong><br />
+          <strong class="text-white">
+            Full-stack web dev with 1.5 years at a US startup.
+          </strong>
+           Skilled in React, Next.js, Tailwind, Chrome extensions & SEO. I Build
+          engaging & scalable web apps. Looking to bring your vision to life?
+          Let's connect
         </div>
 
         <div class="flex flex-col gap-5 py-5">
