--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,7 @@ interface Props {
 
 import Footer from "@/components/layout/Footer.astro";
 import Header from "@/components/layout/Header.astro";
+import GoogleAnalytics from "@/components/google-analytics.astro";
 import SpeedInsights from "@vercel/speed-insights/astro";
 import { ViewTransitions } from "astro:transitions";
 const { title, description, className } = Astro.props;
@@ -59,6 +60,8 @@ const { title, description, className } = Astro.props;
       }
     </script>
 
+    <GoogleAnalytics />
+
     <script is:inline>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
@@ -72,7 +75,7 @@ const { title, description, className } = Astro.props;
       })(window, document, "script", "dataLayer", "GTM-T3FDZDQ2");
     </script>
   </head>
-  <body class={`${className ?? "bg-black text-white/60"} antialiased`}>
+  <body class={`relative ${className ?? "bg-black text-white/60"} antialiased`}>
     <Header />
     <slot />
     <Footer />
@@ -107,19 +110,6 @@ const { title, description, className } = Astro.props;
       }
     </style>
     <SpeedInsights />
-    <script
-      type="text/partytown"
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-5Q5PC91CFN"></script>
-    <script type="text/partytown">
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-
-      gtag("config", "G-5Q5PC91CFN");
-    </script>
 
     <noscript
       ><iframe
