--- a/src/components/sanity/portable-code.astro
+++ b/src/components/sanity/portable-code.astro
@@ -3,7 +3,7 @@ import { Prism } from "@astrojs/prism";
 const { code, language } = Astro.props.node;
 ---
 
-<div id={`code-block`} class="relative">
+<div id={`code-block`} class="relative w-full">
   <button
     id="copy-code"
     class="absolute bottom-3 right-2 z-10 m-0 cursor-pointer rounded border-none bg-[#e2e8f022] p-2 text-sm font-semibold leading-none text-white"
