--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -8,14 +8,14 @@ const blogs = await getBlogs();
 ---
 
 <Layout title="R44J - Blogs">
-  <Main className="mx-auto max-w-4xl pt-48">
+  <Main className="mx-auto max-w-4xl pt-24 sm:pt-48">
     {
       blogs.length > 0 ? (
         <>
-          <h1 class="bg-gradient-to-r from-[#ffff80] to-[#ff80bf] to-[60%] bg-clip-text text-5xl font-bold text-transparent sm:text-4xl">
+          <h1 class="bg-gradient-to-r from-[#ffff80] to-[#ff80bf] to-[60%] bg-clip-text text-center text-2xl font-bold text-transparent sm:text-left sm:text-4xl md:text-5xl">
             Discover: Blog Articles and More
           </h1>
-          <div class="mt-10 flex flex-col gap-5">
+          <div class="mt-0 flex flex-col gap-5 sm:mt-10">
             {blogs.map((blog) => (
               <BlogCard key={blog._id} blog={blog} />
             ))}
