refactor: highlight toc as you scroll

--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -61,6 +61,7 @@ const pathname = Astro.url.pathname;
 </header>
 
 <script>
+  console.log("header");
   import gsap from "gsap";
   import SplitType from "split-type";
 
