--- a/src/components/blog/blog-card.astro
+++ b/src/components/blog/blog-card.astro
@@ -6,9 +6,11 @@ import { Image } from "astro:assets";
 const { blog } = Astro.props as { blog: Blog };
 ---
 
-<div
-  class="flex h-full items-center rounded-3xl bg-gradient-to-b from-blue-800 to-purple-800 p-px"
->
+<a href={`/blog/${blog.slug?.current}`} class="group relative">
+  <div
+    class="animate-tilt absolute -inset-0.5 -z-10 rounded-3xl bg-gradient-to-r from-blue-800 to-purple-800 opacity-60 blur transition duration-1000 group-hover:opacity-100 group-hover:duration-200"
+  >
+  </div>
   <article
     class="flex h-full w-full flex-col overflow-hidden rounded-[calc(1.5rem-1px)] bg-black p-3 sm:flex-row"
   >
@@ -38,14 +40,14 @@ const { blog } = Astro.props as { blog: Blog };
         </div>
       </div>
 
-      <div class="flex flex-row-reverse items-center justify-between">
+      <!-- <div class="flex flex-row-reverse items-center justify-between">
         <a
           href={`/blog/${blog.slug?.current}`}
           class="rounded bg-accent p-1.5 px-3 text-xs font-bold text-white shadow-lg ring-accent ring-offset-2 ring-offset-black transition-all hover:ring-2 sm:text-sm"
         >
           Read More
         </a>
-      </div>
+      </div> -->
     </div>
   </article>
-</div>
+</a>
