--- a/src/components/blog/table-of-content.astro
+++ b/src/components/blog/table-of-content.astro
@@ -13,7 +13,7 @@ const getChildrenText = (props) =>
   {
     // @ts-ignore
     props.outline.map((heading) => (
-      <li id={heading} class="transition-all hover:text-white/90">
+      <li id={`toc-${heading._key}`} class="transition-all hover:text-white/90">
         <a href={"#" + heading._key}>{getChildrenText(heading)}</a>
         {heading.subheadings.length > 0 && (
           <Astro.self outline={heading.subheadings} />
