--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -12,10 +12,10 @@ const blogs = await getBlogs();
     {
       blogs.length > 0 ? (
         <>
-          <h1 class="bg-gradient-to-r from-[#ffff80] to-[#ff80bf] to-[60%] bg-clip-text text-center text-2xl font-bold text-transparent sm:text-left sm:text-4xl md:text-5xl">
+          <h1 class="bg-gradient-to-r from-[#ffff80] to-[#ff80bf] to-[60%] bg-clip-text pb-2 text-center text-2xl font-bold text-transparent sm:text-left sm:text-4xl md:text-5xl">
             Discover: Blog Articles and More
           </h1>
-          <div class="mt-0 flex flex-col gap-5 sm:mt-10">
+          <div class="flex flex-col gap-5">
             {blogs.map((blog) => (
               <BlogCard key={blog._id} blog={blog} />
             ))}
