--- a/src/pages/blog/[blog].astro
+++ b/src/pages/blog/[blog].astro
@@ -73,7 +73,7 @@ const outline = parseOutline(post.body);
 
           <div class="mx-auto w-full max-w-3xl">
             <div
-              class="prose w-full lg:prose-lg prose-headings:text-white prose-p:text-white/70 prose-a:text-blue-600 hover:prose-a:text-blue-500 prose-strong:text-white"
+              class="prose w-full lg:prose-lg prose-headings:text-white prose-p:text-white/70 prose-a:text-blue-600 hover:prose-a:text-blue-500 prose-blockquote:text-white/50 prose-strong:text-white"
             >
               <PortableText portableText={post.body} />
             </div>
