--- a/src/components/sanity/portable-code.astro
+++ b/src/components/sanity/portable-code.astro
@@ -1,21 +1,19 @@
 ---
 import { Prism } from "@astrojs/prism";
-const { code, language } = Astro.props.node;
+import Clipboard from "@/assets/svg-components/clipboard.astro";
+const { code, language, _key } = Astro.props.node;
 ---
 
-<div id={`code-block`} class="relative w-full">
-  <button
-    id="copy-code"
-    class="absolute bottom-3 right-2 z-10 m-0 cursor-pointer rounded border-none bg-[#e2e8f022] p-2 text-sm font-semibold leading-none text-white"
-  >
-    Copy
+<div id={`code-${_key}-block`} class="relative w-full">
+  <button id={`${_key}-copy-code`} class="absolute bottom-3 right-2 z-10">
+    <Clipboard />
   </button>
   <Prism lang={language} code={code} />
 </div>
 
-<script is:inline>
-  const copyBtn = document.getElementById("copy-code");
-  const codeElement = document.querySelector(`#code-block > pre`);
+<script is:inline define:vars={{ _key }}>
+  const copyBtn = document.getElementById(`${_key}-copy-code`);
+  const codeElement = document.querySelector(`#code-${_key}-block > pre`);
 
   if (codeElement)
     copyBtn?.addEventListener("click", () => {
@@ -34,9 +32,28 @@ const { code, language } = Astro.props.node;
         }
       }
       window.getSelection()?.removeAllRanges();
-      copyBtn.innerHTML = "copied 🚀";
+      copyBtn.innerHTML = `
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-green-500">
+          <path stroke-linecap="round" stroke-linejoin="round" d="m4.5 12.75 6 6 9-13.5" />
+        </svg>
+      `;
       setTimeout(() => {
-        copyBtn.innerHTML = "copy";
+        copyBtn.innerHTML = `
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+            class="h-4 w-4"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15.666 3.888A2.25 2.25 0 0 0 13.5 2.25h-3c-1.03 0-1.9.693-2.166 1.638m7.332 0c.055.194.084.4.084.612v0a.75.75 0 0 1-.75.75H9a.75.75 0 0 1-.75-.75v0c0-.212.03-.418.084-.612m7.332 0c.646.049 1.288.11 1.927.184 1.1.128 1.907 1.077 1.907 2.185V19.5a2.25 2.25 0 0 1-2.25 2.25H6.75A2.25 2.25 0 0 1 4.5 19.5V6.257c0-1.108.806-2.057 1.907-2.185a48.208 48.208 0 0 1 1.927-.184"
+            ></path>
+          </svg>
+        `;
       }, 5000);
     });
 </script>
